Bug #201891 --> lazily instantiate CSSFrameConstructor::gXBLService in order to break a weird cycle with the component manager that can cause two instances of the xbl service to be created. r/sr=dbaron