layout/build/nsLayoutModule.cpp
@@ -249,7 +249,6 @@ Initialize(nsIModule* aSelf)
 #ifdef DEBUG
   nsFrame::DisplayReflowStartup();
 #endif
-  nsCSSFrameConstructor::InitGlobals();
   nsTextTransformer::Initialize();
   nsImageLoadingContent::Initialize();
 
